--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://marissakrantz.github.io/react-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "gh-pages": "^3.2.3",
     "jquery": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
